# imgui_juce

./: .gitignore  README
examples/: README
examples/hidpi/: CMakeLists.txt  README
examples/hidpi/src/: CMakeLists.txt  ImGuiComponent.h  Main.cpp  iosevka.h
examples/mwe/: CMakeLists.txt  README
examples/mwe/src/: CMakeLists.txt  ImGuiComponent.h  Main.cpp
examples/scope/: CMakeLists.txt  README
examples/scope/patches/imgui/: multi_instance.patch
examples/scope/patches/implot/: multi_instance.patch
examples/scope/src/: CMakeLists.txt  Main.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
examples/sine/: CMakeLists.txt  README
examples/sine/patches/imgui/: multi_instance.patch
examples/sine/src/: CMakeLists.txt  Main.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
modules/: CMakeLists.txt
modules/imgui_impl_juce/: imgui_impl_juce.cpp  imgui_impl_juce.h
